--- a/_pages/team/index.html
+++ b/_pages/team/index.html
@@ -27,6 +27,26 @@ permalink: /team/
             <div class="card-body">
             <h4 class="card-title">{{ member.title }}</h4>
             <p class="card-text">{{ member.role }}</p>
+            <!-- Twitter -->
+            {% if member.social.twitter %}
+            <a target="blank" href="{{member.social.twitter}}"><i class="fab fa-twitter"></i></a>
+            {% endif %}
+            <!-- Linkedin -->
+            {% if member.social.linkedin %}
+                <a target="blank" href="{{member.social.linkedin}}"><i class="fab fa-linkedin"></i></a>
+            {% endif %}
+            <!-- Github -->
+            {% if member.social.github %}
+                <a target="blank" href="{{member.social.github}}"><i class="fab fa-github"></i></a>
+            {% endif %}
+            <!-- Personal Website -->
+            {% if member.social.website %}
+                <a target="blank" href="{{member.social.website}}"><i class="fas fa-globe"></i></a>
+            {% endif %}
+            <!-- Google Scholar -->
+            {% if member.social.google-scholar %}
+                <a target="blank" href="{{member.social.google-scholar}}"><i class="fab fa-google"></i></a>
+            {% endif %}
             </div>
         </div>
     </div>
