--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -19,16 +19,19 @@ permalink: /publications/
             <!-- authors -->
             {% assign authors = "" %}
             {% for author in publi.author %}
-                {% assign authors = authors | append: author.given | append: " " | append: author.family | append: ", " %}
+                {% assign authors = authors | append: author.given | append: " " | append: author.family %}
+                {% unless forloop.last %}
+                    {% assign authors = authors | append: ", " %}
+                {% endunless %}
             {% endfor %}
-            {{ authors | strip | replace_last: ",", "" }},
+            {{ authors | strip }}.
+
+            <!-- issued date -->
+            ({{ publi.issued.date-parts | jsonify | slice: 2,4 }})
 
             <!-- title with link -->
-            <a href="{{publi.link}}"><b>"{{ publi.title }}"</b></a>,
+            <a href="{{publi.link}}">{{ publi.title }}</a>.
             
-            <!-- issued date -->
-            ({{ publi.issued.date-parts | jsonify | slice: 2,4 }}),
-
             <!-- container -->
             <i>{{ publi.container-title }}</i>
 
