--- a/_pages/team/index.html
+++ b/_pages/team/index.html
@@ -28,7 +28,7 @@ permalink: /team/
             <h4 class="card-title">{{ member.title }}</h4>
             <p class="card-text">{{ member.role }}</p>
             <p class="card-text"><b>Research Interest:</b> {{ member.interest }}</p>
-            <p class="card-text"><b>E-mail:</b> {{ member.netid }} at illinois dot edu </p>
+            <p class="card-text"><b>E-mail:</b> <tt>{{ member.netid }} at illinois dot edu</tt> </p>
             <!-- Twitter -->
             {% if member.social.twitter %}
             <a target="blank" href="{{member.social.twitter}}"><i class="fab fa-twitter"></i></a>
