--- a/_pages/team/index.html
+++ b/_pages/team/index.html
@@ -14,7 +14,7 @@ permalink: /team/
 {% assign members = site.posts | where: 'category', 'staff' | sort: 'date' %}
 {% for member in members %}
 <div class="card team-member-card">
-    <div class="row mt-3">
+    <div class="row align-items-center mt-3">
         <div class="col-md-2">
             <!-- <a href={{member.url}}> -->
                 <img src="{{ site.url }}{{ site.baseurl }}/images/team/{{ member.image }}"
