fix alumni formatting

--- a/_pages/team/index.html
+++ b/_pages/team/index.html
@@ -110,12 +110,10 @@ permalink: /team/
 {% for member in members %}
 <div class="card team-member-card">
     <div class="row align-items-center mt-3">
-        <div class="col-md-2">
-        </div>
-        <div class="col-md-10">
+        <div class="col-md-12">
             <div class="card-body">
-            <h4 class="card-title">{{ member.title }}</h4>
-            <p class="card-text">{{ member.role }}</p>
+            <h5 class="card-title">{{ member.title }}</h5>
+            <!-- <p class="card-text">{{ member.role }}</p> -->
             <!-- Personal Website -->
             {% if member.social.website %}
                 <a target="blank" href="{{member.social.website}}"><i class="fas fa-globe"></i></a>
@@ -130,12 +128,10 @@ permalink: /team/
 {% for member in members %}
 <div class="card team-member-card">
     <div class="row align-items-center mt-3">
-        <div class="col-md-2">
-        </div>
-        <div class="col-md-10">
+        <div class="col-md-12">
             <div class="card-body">
-            <h4 class="card-title">{{ member.title }}</h4>
-            <p class="card-text">{{ member.role }}</p>
+            <h5 class="card-title">{{ member.title }}</h5>
+            <!-- <p class="card-text">{{ member.role }}</p> -->
             <!-- Personal Website -->
             {% if member.social.website %}
                 <a target="blank" href="{{member.social.website}}"><i class="fas fa-globe"></i></a>
@@ -150,12 +146,10 @@ permalink: /team/
 {% for member in members %}
 <div class="card team-member-card">
     <div class="row align-items-center mt-3">
-        <div class="col-md-2">
-        </div>
-        <div class="col-md-10">
+        <div class="col-md-12">
             <div class="card-body">
-            <h4 class="card-title">{{ member.title }}</h4>
-            <p class="card-text">{{ member.role }}</p>
+            <h5 class="card-title">{{ member.title }}</h5>
+            <!-- <p class="card-text">{{ member.role }}</p> -->
             <!-- Personal Website -->
             {% if member.social.website %}
                 <a target="blank" href="{{member.social.website}}"><i class="fas fa-globe"></i></a>
