fix alumni format

--- a/_pages/team/index.html
+++ b/_pages/team/index.html
@@ -112,12 +112,12 @@ permalink: /team/
     <div class="row align-items-center mt-3">
         <div class="col-md-12">
             <div class="card-body">
-            <h5 class="card-title">{{ member.title }}</h5>
+            <h4 class="card-title">{{ member.title }}</h4>
             <!-- <p class="card-text">{{ member.role }}</p> -->
             <!-- Personal Website -->
-            {% if member.social.website %}
+            <!-- {% if member.social.website %}
                 <a target="blank" href="{{member.social.website}}"><i class="fas fa-globe"></i></a>
-            {% endif %}
+            {% endif %} -->
             </div>
         </div>
     </div>
@@ -130,12 +130,12 @@ permalink: /team/
     <div class="row align-items-center mt-3">
         <div class="col-md-12">
             <div class="card-body">
-            <h5 class="card-title">{{ member.title }}</h5>
+            <h4 class="card-title">{{ member.title }}</h4>
             <!-- <p class="card-text">{{ member.role }}</p> -->
             <!-- Personal Website -->
-            {% if member.social.website %}
+            <!-- {% if member.social.website %}
                 <a target="blank" href="{{member.social.website}}"><i class="fas fa-globe"></i></a>
-            {% endif %}
+            {% endif %} -->
             </div>
         </div>
     </div>
@@ -148,12 +148,12 @@ permalink: /team/
     <div class="row align-items-center mt-3">
         <div class="col-md-12">
             <div class="card-body">
-            <h5 class="card-title">{{ member.title }}</h5>
+            <h4 class="card-title">{{ member.title }}</h4>
             <!-- <p class="card-text">{{ member.role }}</p> -->
             <!-- Personal Website -->
-            {% if member.social.website %}
+            <!-- {% if member.social.website %}
                 <a target="blank" href="{{member.social.website}}"><i class="fas fa-globe"></i></a>
-            {% endif %}
+            {% endif %} -->
             </div>
         </div>
     </div>
