--- a/_pages/team/index.html
+++ b/_pages/team/index.html
@@ -1,7 +1,7 @@
 ---
 title: "Team"
 layout: default
-excerpt: "hmr-lab: Team members"
+excerpt: "Hockenmaier Lab: Team members"
 sitemap: false
 permalink: /team/
 ---
